[tool.poetry]
name = "rdb2rdf"
version = "3.0.0"
description = "Python3 port of rdb2rdf"
authors = ["Ivan D Vasin <nisavid@gmail.com>", "Dan Newcome <dnewcome@earnup.com>"]
packages = [
    { include = ".rdb2rdf/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.8"
twine = "^3.2.0"
psycopg2-binary = "^2.8.6"
sqlalchemy = "^1.3.20"
dumper = "^1.2.0"

[[tool.poetry.source]]
name = "EarnUp Internal Nexus"
url = "https://nexus.earnup.com/repository/PyPI-All/simple"
default = true

[tool.poetry.dev-dependencies]
twine = "^3.2.0"
[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

